# rpi-resize-stb

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-rpi.sh  preview.sh  rpi-toolchain.cmake
scripts/: install-rpi.sh  make-release.sh  preview.sh
src/: dependencies.c  main.c  main.cpp  stbresize.c
